[package]
name = "oddjobs_renderer"
version = "0.0.0"
authors = ["deer <deer@codeberg.org>"]
edition = "2018"
description = "Renderer for the website of Oddjobs"
repository = "https://codeberg.org/deer/pages"
readme = "README.md"
keywords = ["maplestory", "markdown", "json", "challenge run"]
categories = ["games"]
license = "AGPL-3.0-or-later"

[dependencies]
pulldown-cmark = { version = "0.8.0", default-features = false }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
